# autosar-e2e

./: Cargo.toml  LOCAL_CI.md  README.md  local-ci.sh  tarpaulin-report.html
.claude/: settings.local.json
.github/workflows/: ci.yml
benches/: e2e_profiles.rs
src/: lib.rs  profile11.rs  profile22.rs  profile4.rs  profile5.rs  profile6.rs  profile7.rs  profile8.rs  profiles.rs
src/common/: counter.rs  crc_ops.rs  field_ops.rs  validation.rs
src/profiles/: profile11.rs  profile22.rs  profile4.rs  profile4m.rs  profile5.rs  profile6.rs  profile7.rs  profile7m.rs  profile8.rs
